`FE`: Circle input close to end

--- a/test/circle.html
+++ b/test/circle.html
@@ -7,17 +7,18 @@
 
 <div class="circle-input">
   <div class="extern">
+    <div class="circular-input"></div>
     <div class="outer">
       <div class="inner">
-        <div id="number">
-          64%
+        <div id="circle-output">
+          1
         </div>
       </div>
     </div>
   </div>
 
   <svg width="200px" height="200px">
-    <circle cx="100" cy="100" r="80" stroke-linecap="round" />
+    <circle cx="100" cy="100" r="80" stroke-linecap="round" id="rotating-circle"/>
   </svg>
 
 </div>
