`FE`: Circle input finished

--- a/test/circle.html
+++ b/test/circle.html
@@ -10,6 +10,7 @@
     <div class="circular-input"></div>
     <div class="outer">
       <div class="inner">
+        <div id="circle-text">CHARACTERS</div>
         <div id="circle-output">
           1
         </div>
@@ -22,22 +23,7 @@
   </svg>
 
 </div>
-
-
-<script>
-  
-</script>
-
-
-<!-- <div class="circular-container">
-  <div class="circular-input"></div>
-  <div class="circular-output"></div>
-</div> -->
-
-
-
-
   
 </html>
 
-<script src="circle.js"></script>
+<script src="GradientCircle.js"></script>
