`FE`: Generate page: 9/10

--- a/test/circle.html
+++ b/test/circle.html
@@ -254,7 +254,7 @@
 <script src="GradientCircle.js"></script>
 
 <!-- import single color circle JS functions -->
-<!-- <script src="../static/circle.js"></script> -->
+<!-- <script src="../static/circle_1.js"></script> -->
 
 <script>
 
